--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="madsoft.com.form.AboutActivity">
+    tools:context="madsoft.com.form.Activity.AboutActivity">
 
     <TextView
         android:layout_width="match_parent"
