--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,6 +10,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:columnCount="2"
     android:rowCount="1"
-    tools:context="madsoft.com.form.SettingsActivity">
+    tools:context="madsoft.com.form.Activity.SettingsActivity">
 
 </GridLayout>
