--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,6 @@
         <color name="secondary_text">#757575</color>
         <color name="icons">#FFFFFF</color>
         <color name="divider">#BDBDBD</color>
-    <color name="fragments_background">#e2e2e2</color>
+    <color name="fragments_background">#FFFFFF</color>
 
 </resources>
