--- a/app/src/main/res/layout/quiz_page.xml
+++ b/app/src/main/res/layout/quiz_page.xml
@@ -67,7 +67,8 @@ android:layout_height="match_parent">
             android:id="@+id/quiz_answers"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:layout_margin="10dp"/>
     </TableRow>
 </TableLayout>
 </LinearLayout>
