--- a/app/src/main/res/layout/card_list_item.xml
+++ b/app/src/main/res/layout/card_list_item.xml
@@ -10,20 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="50dp"
+        android:layout_margin="0dp"
         android:background="@color/cardview_light_background"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
         card_view:cardBackgroundColor="@color/cardview_light_background"
         card_view:cardElevation="2dp"
-        card_view:cardUseCompatPadding="true"
-        card_view:contentPadding="0dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
+        card_view:cardUseCompatPadding="true">
+        <TextView
                 android:id="@+id/card_title_search"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -31,7 +25,6 @@
                 android:textColor="@color/primary_text"
                 android:textSize="18sp"
                 android:textStyle="bold" />
-        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
