--- a/app/src/main/res/layout/fragment_downloaded.xml
+++ b/app/src/main/res/layout/fragment_downloaded.xml
@@ -12,11 +12,12 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true">
-        <ListView
+        <androidx.recyclerview.widget.RecyclerView
+            android:scrollbars="vertical"
+            android:id="@+id/recycler_view_downloaded"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/d_list_view"
-            />
+            android:layout_height="wrap_content">
+        </androidx.recyclerview.widget.RecyclerView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
