--- a/app/src/main/res/layout/fragment_downloaded.xml
+++ b/app/src/main/res/layout/fragment_downloaded.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/fragments_background"
+    android:paddingBottom="56dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
