--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,10 @@
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryLight">#B2DFDB</color>
     <color name="colorPrimaryDark">#00796B</color>
-    <color name="colorSecondary">#607D8B</color>
+    <color name="colorSecondary">#FF5722</color>
     <color name="colorBackground">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
-    <color name="colorAccent">#607D8B</color>
+    <color name="colorAccent">#FF5722</color>
         <color name="primary_text">#212121</color>
         <color name="secondary_text">#757575</color>
         <color name="icons">#FFFFFF</color>
