--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,14 +24,14 @@
         app:closeIcon="@drawable/baseline_done_white_24"
         app:duration="500">
         <include layout="@layout/category_picker" android:id="@+id/categories_layout"/>
+
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/pager"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </androidx.viewpager.widget.ViewPager>
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:scrollbarSize="2dp"></androidx.viewpager.widget.ViewPager>
     </com.evolve.backdroplibrary.BackdropContainer>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floating_action_button"
@@ -43,10 +43,14 @@
         android:layout_margin="16dp"
         android:layout_above="@id/bottom_navigation"
         app:srcCompat="@drawable/round_home_white_24"/>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:layout_alignWithParentIfMissing="false"
+        android:layout_alignParentEnd="false"
         android:layout_alignParentBottom="true"
         app:itemBackground="@color/colorPrimary"
         app:itemIconTint="@color/icons"
