--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -9,5 +9,15 @@
     <FrameLayout
         android:id="@+id/settings"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/string_about"
+        android:layout_marginEnd="5dp"
+        android:layout_gravity="center"
+        android:id="@+id/button_about"
+        android:textColor="@color/colorAccent"
+        style ="?android:attr/borderlessButtonStyle"
+        />
 </LinearLayout>
