--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/action_downloaded"
-        android:showAsAction="ifRoom"
+        app:showAsAction="ifRoom"
         android:enabled="true"
         android:icon="@drawable/round_get_app_24"
         android:title="@string/text_downloaded"></item>
@@ -14,16 +15,16 @@
         android:title="@string/text_main"
         android:icon="@drawable/round_home_24"
         android:enabled="true"
-        android:showAsAction="ifRoom"
+        app:showAsAction="ifRoom"
         ></item>
 
 
     <item
         android:id="@+id/action_search"
-        android:showAsAction="ifRoom"
         android:enabled="true"
         android:icon="@drawable/round_search_24"
-        android:title="@string/text_search"></item>
+        android:title="@string/text_search"
+        app:showAsAction="ifRoom"></item>
 
 
 
